use smaller text in the 'new todo' input and reduce the amount of space it takes up. this seems to make the rest of the columns narrower which would make the date wrap, so prevent that as well. this accidentally made the whole thing fit on a 1080p screen without needing to scroll.

--- a/static-src/scss/style.scss
+++ b/static-src/scss/style.scss
@@ -37,7 +37,6 @@ input[type=text], input:not([type]), textarea, select {
 }
 input[type=text], input:not([type]), textarea, select {
     font-size: 1.1rem;
-    height: 2.5rem;
 }
 
 .panel {
